<resources>
    <string name="app_name">StudentFitnessTracker</string>

    <!-- Settings -->

    <string name="settings">Settings</string>

    <!--Personal Data -->

    <string name="personal_data">Persönliche Daten</string>

    <string name="header_weight">Gewicht: </string>
    <string name="edit_weight"></string>
    <string name="text_kg"> kg</string>

    <string name="session_aim">Sessionziel: </string>
    <string name="edit_session_aim"></string>
    <string name="text_kCal_bis">kCal bis</string>

    <string name="button_change_personal_data">Ändern</string>
    <string name="button_save_personal_data">Speichern</string>

    <!-- Goal -->

    <string name="personal_goal">Persönliches Ziel</string>
    <string name="current_goal">Aktuelles Ziel</string>
    <string name="current_goal_value_date">5000 kCal bis 01.01.2019</string>
    <string name="set_new_goal">Neues Ziel setzen</string>
    <string name="set_new_goal_value"></string>
    <string name="set_new_goal_date">02.01.2019 12:00</string>
    <string name="set_new_goal_button">Neues Ziel setzen</string>


    <!-- Fragments/Activites -->

    <string name="no_kalories_burned">Es wurde keine Session hinzugefügt, weil dein Kalorienverbrauch zu gering war!</string>

    <!-- Fortschritt -->

    <string name="goal_title">Deine Persönliche Statistik</string>

    <string name="total_mileage_start">Du hast insgesamt</string>
    <string name="total_mileage">0 m zurückgelegt!</string>
    <string name="mileage_cycle">Auf dem Rad: </string>
    <string name="mileage_run">Zu Fuß: </string>
    <string name="mileage_cycle_value"></string>
    <string name="mileage_run_value"></string>

    <string name="average_kcal">Du verbrauchst durchschnittlich 100 Kalorien pro Tag!</string>
    <string name="goal_percentage">Du hast bisher 0% deines Wochenziels erreicht!</string>

    <string name="total_kCal">Du hast insgesamt 0 Kalorien verbraucht!</string>

    <!-- Session -->

    <string name="session_fragment_title">Session Fragment</string>
    <string name="session_type_run">Laufen</string>
    <string name="session_type_cycle">Radfahren</string>
    <string name="session_start">Session starten</string>

    <string name="current_session_type">Laufen/Rad</string>
    <string name="session_header_time">Zeit: </string>
    <string name="session_current_time">00:00</string>
    <string name="session_header_kCal">kCal: </string>
    <string name="session_current_kCal">0</string>
    <string name="session_header_pace">Pace: </string>
    <string name="session_current_pace">00.0 km/h</string>
    <string name="session_stop">Session beenden</string>
    <string name="session_header_distance">Distanz: </string>
    <string name="session_current_distance">0 km</string>

    <!-- Maps -->

    <string name="map_fragment_title">Map Fragment</string>

    <!-- Bottom Menu -->

    <string name="menu_progress">Fortschritt</string>
    <string name="menu_new_session">Neue Session</string>
    <string name="menu_session_overview">Verlauf</string>

    <!-- Notifications -->

    <string name="app_permission_title">App GPS Permission</string>
    <string name="app_permission_message">Zum verwenden dieser App musst du GPS für diese App aktivieren.</string>
    <string name="app_permission_enabled">GPS App Permission wurden gegeben. Viel Erfolg beim abnehmen!</string>
    <string name="app_permission_disabled">GPS App Permission wurden abgelehnt. So kannst du diese App nicht nutzen.</string>

    <string name="gps_permission_message">Dein GPS ist nicht auf deinem Smartphone aktiviert und wird benötigt. GPS aktivieren?</string>
    <string name="gps_permission_settings">Einstellungen</string>
    <string name="gps_permission_deny">Abbrechen</string>

    <!--- Resources -->

    <string name="google_maps_api_key">AIzaSyD7dK8SRmEDIolB6SKoVECqmphWTsMNNEs</string>

    <!-- Session Items -->
    <string name="session_item_distance"></string>
    <string name="session_item_time"></string>
    <string name="session_item_pace"></string>
    <string name="session_item_date"></string>
    <string name="session_item_type"></string>
    <string name="session_item_kCal"></string>

    <!-- Error Message -->

    <string name="error_message_log_exception">Es ist etwas schiefgelaufen: </string>
    <string name="error_message_log_exception_tag">ERROR</string>


</resources>
