<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/session_fragment_onGoing">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/current_session_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/param_padding"
            android:paddingEnd="@dimen/param_padding"
            android:paddingTop="10dp"
            android:paddingBottom="40dp"
            android:textSize="@dimen/session_type_text_size"
            android:text="@string/current_session_type"/>

        <Button
            android:id="@+id/button_stop_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/button"
            android:text="@string/session_stop"/>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:id="@+id/layout_session_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_session_type"
            android:layout_alignParentStart="true">

            <TextView
            android:id="@+id/header_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/session_ongoing_param"
            android:paddingStart="@dimen/param_padding"
            android:paddingEnd="@dimen/space"
            android:text="@string/session_header_time"/>

            <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_time"
            android:paddingEnd="@dimen/param_padding"
            android:textSize="@dimen/session_ongoing_param"
            android:text="@string/session_current_time" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:id="@+id/layout_session_kCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_session_time">

            <TextView
                android:id="@+id/header_kCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/session_ongoing_param"
                android:paddingStart="@dimen/param_padding"
                android:paddingEnd="@dimen/space"
                android:text="@string/session_header_kCal"/>

            <TextView
                android:id="@+id/current_kCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/header_kCal"
                android:paddingEnd="@dimen/param_padding"
                android:textSize="@dimen/session_ongoing_param"
                android:text="@string/session_current_kCal"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/layout_session_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_session_type"
            android:layout_toEndOf="@+id/layout_session_time">

            <TextView
                android:id="@+id/header_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/session_ongoing_param"
                android:paddingStart="@dimen/param_padding"
                android:paddingEnd="@dimen/space"
                android:text="@string/session_header_pace" />

            <TextView
                android:id="@+id/current_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/header_pace"
                android:textSize="@dimen/session_ongoing_param"
                android:paddingEnd="@dimen/param_padding"
                android:text="@string/session_current_pace" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/layout_running_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_session_time"
            android:layout_toEndOf="@+id/layout_session_time">

            <TextView
                android:id="@+id/header_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/session_ongoing_param"
                android:paddingStart="@dimen/param_padding"
                android:paddingEnd="@dimen/space"
                android:text="@string/session_header_distance" />

            <TextView
                android:id="@+id/current_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/header_distance"
                android:textSize="@dimen/session_ongoing_param"
                android:paddingEnd="@dimen/param_padding"
                android:text="@string/session_current_distance" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>