<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem_taskitem"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="12dp">

    <TextView
        android:id="@+id/session_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/list_item_padding_top"
        android:paddingStart="@dimen/list_item_padding_small"
        android:paddingEnd="@dimen/list_item_padding"
        android:maxLines="1"
        android:textSize="12sp"
        android:text="@string/session_item_type"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_time_distance_kcal"
        android:layout_toEndOf="@id/session_item_type">

        <TextView
            android:id="@+id/session_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingStart="@dimen/list_item_padding_small"
            android:paddingEnd="@dimen/list_item_padding"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/session_item_time"/>

        <TextView
            android:id="@+id/session_item_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@id/session_item_time"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingStart="@dimen/list_item_padding_small"
            android:paddingEnd="@dimen/list_item_padding"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/session_item_distance"/>

        <TextView
            android:id="@+id/session_item_kCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/session_item_time"
            android:layout_toEndOf="@id/session_item_distance"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingStart="@dimen/list_item_padding"
            android:paddingEnd="@dimen/list_item_padding"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/session_header_kCal"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/layout_time_distance_kcal">

        <TextView
            android:id="@+id/session_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingStart="@dimen/list_item_padding"
            android:paddingEnd="@dimen/list_item_padding"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/session_item_date"/>



        <TextView
            android:id="@+id/session_item_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/session_item_date"

            android:paddingTop="@dimen/list_item_padding_top"
            android:paddingStart="@dimen/list_item_padding"
            android:paddingEnd="@dimen/list_item_padding"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textSize="12sp"
            android:text="@string/session_item_pace"/>

    </RelativeLayout>



</RelativeLayout>