<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.mi.ur.studentfitnesstracker.Activities.PersonalData">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >



        <!-- Weight -->

        <RelativeLayout
            android:id="@+id/current_goal_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/current_goal"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="50dp"
                android:paddingTop="15dp"
                android:paddingStart="@dimen/param_padding"
                android:textAlignment="center"
                android:textSize="@dimen/session_type_text_size"
                android:text="@string/current_goal"/>


            <TextView
                android:id="@+id/current_goal_value"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:textAlignment="textStart"
                android:layout_height="50dp"
                android:layout_below="@id/current_goal"
                android:paddingStart="@dimen/param_padding"
                android:textSize="@dimen/session_type_text_size"
                android:text="@string/current_goal_value_date"/>

        </RelativeLayout>

        <!--- Weekly Aim -->

        <RelativeLayout
            android:id="@+id/new_goal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_goal_layout"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/new_goal"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="50dp"
                android:paddingTop="15dp"
                android:paddingStart="@dimen/param_padding"
                android:textAlignment="center"
                android:textSize="@dimen/session_type_text_size"
                android:text="@string/set_new_goal"/>

            <EditText
                android:id="@+id/new_goal_value"
                android:layout_width="100dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_goal"
                android:layout_toStartOf="@id/text_kCal"
                android:textSize="@dimen/session_type_text_size"
                android:inputType="numberDecimal"
                android:text="@string/set_new_goal_value"/>



            <TextView
                android:id="@+id/text_kCal"
                android:layout_width="wrap_content"
                android:paddingTop="15dp"
                android:textAlignment="textStart"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/new_goal"
                android:paddingStart="@dimen/param_padding"
                android:paddingEnd="@dimen/space"
                android:textSize="@dimen/session_type_text_size"
                android:text="@string/text_kCal"/>




        </RelativeLayout>


        <Button
            android:id="@+id/button_change_goal"
            android:layout_marginTop="75dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:background="@color/success_color"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_goal_layout"
            android:textSize="@dimen/button"
            android:layout_centerHorizontal="true"
            android:text="@string/button_change_personal_data"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
